@@ -135,6 +135,7 @@ class Client(object):
             ),
             collect_frequency=self.config.transaction_send_frequency,
             sample_rate=self.config.transaction_sample_rate,
+            max_spans=self.config.transaction_max_spans,
             max_queue_length=self.config.max_event_queue_length,
             ignore_patterns=self.config.transactions_ignore_patterns,
         )
